src/objects/RecordTypeSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Caso_BrandSpecialist__c</fullName>
        <label>Caso_BrandSpecialist</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso_CustomerCare__c</fullName>
        <label>Caso_CustomerCare</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso_OMS__c</fullName>
        <label>Caso_OMS</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso_ResoCambioStore__c</fullName>
        <label>Caso_ResoCambioStore</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso_ResoCambio__c</fullName>
        <label>Caso_ResoCambio</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ResoCambioStore__c</fullName>
        <label>Task_ResoCambioStore</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Wishlist__c</fullName>
        <label>Task_Wishlist</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RecordTypeSetting</label>
</CustomObject>